<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_camera"
            android:icon="@drawable/ic_launcher_foreground"
            android:title="@string/menu_camera" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_launcher_foreground"
            android:title="@string/menu_gallery" />
    </group>

    <item android:title="@string/menu_group">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_settings"
                    android:icon="@drawable/ic_launcher_foreground"
                    android:title="@string/menu_ajustes" />

                <item
                    android:id="@+id/nav_exit"
                    android:icon="@drawable/ic_exit_app"
                    android:title="@string/menu_salir" />
            </group>
        </menu>
    </item>

</menu>
