<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout
    android:id="@+id/drawer_layout"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:openDrawer="start">

    <!-- Contenido principal -->
    <LinearLayout
        android:id="@+id/main_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:fitsSystemWindows="true">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize" />

        <Button
            android:id="@+id/doNotDisturbButton"
            style="@style/ButtonStyle"
            android:text="@string/donotdisturb" />

        <Button
            style="@style/ButtonStyle"
            android:id="@+id/send_button"
            android:text="@string/send" />

        <Button
            android:id="@+id/logout_button"
            style="@style/ButtonStyle"
            android:text="@string/logout" />

        <Button
            android:id="@+id/delete_user_button"
            style="@style/ButtonStyle"
            android:text="@string/delete_account" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/user_info"
            android:textSize="20sp"
            android:text="" />

    </LinearLayout>

    <!-- Menú lateral -->
    <com.google.android.material.navigation.NavigationView
        android:id="@+id/navigation_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:fitsSystemWindows="true"
        app:headerLayout="@layout/nav_header"
        app:itemBackground="@drawable/drawer_background_selector"
        app:itemTextColor="@color/black"
        app:menu="@menu/activity_main_navigation_drawer" />

</androidx.drawerlayout.widget.DrawerLayout>